[package]
name = "emscripten_rs_sys"
version = "0.1.2"
authors = [ "Tamás Suhajda <sutajo@gmail.com>" ]
edition = "2024"
keywords = [ "emscripten", "ffi" ]
description = "Bindgen-generated bindings to all public emscripten functions"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sutajo/emscripten-rs-sys"

[features]
default = ["em_js"]
em_js = []

[dependencies]
emscripten-rs-macros = { version = "0.1.0" }

[build-dependencies]
bindgen = "0.72.1"
which = "8.0.0"

[[example]]
name = "websocket"

[dev-dependencies]
libc = "0.2.175"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-emscripten"

[profile.release]
debug = true