[package]
name = "emscripten_rs_macros"
version = "0.1.0"
authors = [ "Tamás Suhajda <sutajo@gmail.com>" ]
edition = "2024"
keywords = [ "emscripten", "ffi" ]
homepage = "https://https://github.com/sutajo/emscripten-rs-sys"
description = "Utility macros for emscripten_rs_sys"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }